--- a/app/src/main/res/layout/activity_job.xml
+++ b/app/src/main/res/layout/activity_job.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar"/>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rl_scrollview2_id"
@@ -33,235 +33,133 @@
 
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_name_id"
-                    android:text="Name"
-                    android:textSize="20dp"
-                    android:textColor="#000000"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"/>
-
                 <EditText
                     android:id="@+id/et_personname_id"
-                    android:layout_width="wrap_content"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110dp"
                     android:layout_marginTop="22dp"
                     android:background="@drawable/enter_yourname_border"
                     android:hint="Enter your full names"
                     android:inputType="textPersonName"
-                    android:paddingLeft="33dp"
+                    android:layout_centerHorizontal="true"
                     android:paddingRight="40dp"
-                    android:paddingBottom="15dp"
+                    android:paddingLeft="40dp"
+                    android:paddingBottom="7dp"
+                    android:paddingTop="7dp"
                     android:textAlignment="center" />
 
 
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_country1_id"
-                    android:text="Country"
-                    android:textColor="#000000"
-                    android:textSize="20dp"
-                    android:layout_below="@id/tv_name_id"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="40dp"/>
-
-
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personcountry_id"
                     android:hint="Enter your country"
                     android:layout_marginTop="30dp"
-                    android:layout_marginLeft="110dp"
                     android:layout_below="@id/et_personname_id"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:paddingBottom="15dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
+                    android:paddingBottom="7dp"
+                    android:paddingTop="7dp"
+                    android:layout_centerHorizontal="true"
                     android:background="@drawable/edittexts_border"
                     android:textAlignment="center"/>
 
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_location_id"
-                    android:text="Location/City/Town"
-                    android:textColor="#000000"
-                    android:textSize="20dp"
-                    android:layout_below="@id/et_personcountry_id"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="30dp"/>
-
-
                 <EditText
-                    android:layout_width="250dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personlocation_id"
                     android:hint="Enter location/city/town where you are located in"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_below="@id/tv_location_id"
-                    android:paddingLeft="20dp"
-                    android:paddingBottom="70dp"
+                    android:layout_below="@id/et_personcountry_id"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:layout_centerHorizontal="true"
                     android:background="@drawable/location_border"
                     android:textAlignment="center"/>
 
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_phonenumber_id"
-                    android:text="Phone Number"
-                    android:textSize="20dp"
-                   android:layout_below="@id/et_personlocation_id"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:textColor="#000000"/>
-
-
                 <EditText
                     android:id="@+id/et_personphonenumber_id"
-                    android:layout_width="240dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_phonenumber_id"
-                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/et_personlocation_id"
                     android:layout_marginTop="31dp"
                     android:background="@drawable/edittexts_border"
-                    android:hint="Enter phone number here"
+                    android:hint="Enter phone number"
+                    android:layout_centerHorizontal="true"
                     android:inputType="number"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="15dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
+                    android:paddingBottom="7dp"
+                    android:paddingTop="7dp"
                     android:textAlignment="center"/>
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_jobdescription_id"
-                    android:textSize="20dp"
-                    android:text="The type of job to be done"
-                    android:textColor="#000000"
-                    android:layout_below="@id/et_personphonenumber_id"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"/>
 
                 <EditText
                     android:id="@+id/et_personjobtype_id"
-                    android:layout_width="250dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_jobdescription_id"
-                    android:layout_marginLeft="15dp"
+                    android:layout_below="@id/et_personphonenumber_id"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/edittexts_border"
                     android:hint="Give a description about a job to be done and the type of job"
-                    android:paddingLeft="20dp"
-                    android:paddingBottom="70dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:layout_centerHorizontal="true"
                     android:textAlignment="center" />
 
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_describethetermsofemployment"
-                    android:textSize="20dp"
-                    android:text="The Duration of Employment"
-                    android:textColor="#000000"
-                    android:layout_below="@id/et_personjobtype_id"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"/>
-
-
                 <EditText
-                    android:layout_width="250dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personduration_id"
                     android:hint="Describe the type of Employment whether Permanent/casual"
-                    android:layout_below="@id/tv_describethetermsofemployment"
+                    android:layout_below="@id/et_personjobtype_id"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:paddingBottom="70dp"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="15dp"
+                    android:layout_centerHorizontal="true"
                     android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:background="@drawable/edittexts_border"
                     android:textAlignment="center"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_skillsandrequrements_id"
-                    android:text="Requirements/skills needed"
-                    android:textSize="20dp"
-                    android:textColor="#000000"
-                    android:layout_below="@id/et_personduration_id"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"/>
 
                 <EditText
-                    android:layout_width="250dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personrequirements_id"
                     android:hint="Describe requirements or the skills needed from the person"
-                    android:layout_below="@id/tv_skillsandrequrements_id"
+                    android:layout_below="@id/et_personduration_id"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:paddingBottom="70dp"
+                    android:paddingBottom="20dp"
                     android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:background="@drawable/edittexts_border"
                     android:textAlignment="center"/>
 
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="270dp"
+                    android:layout_height="35dp"
                     android:id="@+id/bt_Submit1_id"
                     android:text="Submit"
                     android:textStyle="bold"
                     android:layout_below="@id/et_personrequirements_id"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="20dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:textColor="#ffffff"
-                    android:background="@drawable/submit_border"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
+                    android:background="#0080ff"
+                    android:layout_centerHorizontal="true"
                     android:textAllCaps="false"/>
-
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bt_homepage_id"
-                    android:text="Home page"
-                    android:layout_below="@id/et_personrequirements_id"
-                    android:layout_marginLeft="170dp"
-                    android:layout_marginTop="40dp"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/buttons_border"
-                    android:textStyle="bold"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
-                    android:textAllCaps="false"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_space_id"
-                    android:layout_below="@id/bt_Submit1_id"
-                    android:layout_marginTop="50dp"/>
 
 
 
@@ -269,6 +167,6 @@
 
         </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
 
 </RelativeLayout>
