--- a/app/src/main/res/layout/activity_getjob.xml
+++ b/app/src/main/res/layout/activity_getjob.xml
@@ -19,8 +19,11 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp"
+        android:divider="@drawable/mydevider"
+        android:dividerHeight="5dp"/>
+
 </RelativeLayout>
