--- a/app/src/main/res/layout/activity_jobpage.xml
+++ b/app/src/main/res/layout/activity_jobpage.xml
@@ -48,11 +48,11 @@
 
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="220dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:id="@+id/iv_imageprofile_id"
             android:padding="5dp"
-            android:src="@drawable/ppimage"
+            android:src="@drawable/noblinking"
             android:background="@drawable/image_border"/>
 
         <Button
