--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -7,14 +7,14 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getname1_id"
         android:text="Name"
         android:textSize="20dp"
         android:textColor="#000000"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp" />
 
 
     <TextView
@@ -31,7 +31,7 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getcountry_id"
         android:text="Country"
@@ -55,121 +55,118 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getlocation2_id"
         android:text="Location/City/Town"
         android:textColor="#000000"
         android:layout_below="@+id/tv_getcountry1_id"
         android:textSize="20dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tv_getlocation_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_getlocation2_id"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="20dp"
         android:text="Location/City/Town"
         android:textColor="#0000ff"
-        android:layout_below="@+id/tv_getlocation2_id"
-        android:textSize="16dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"/>
-
-
-
+        android:textSize="16dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getphonenumber2_id"
         android:text="Phone Number"
         android:layout_below="@+id/tv_getlocation_id"
         android:textSize="20dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="35dp"
         android:textColor="#000000"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getphonenumber_id"
         android:text="Phone Number"
         android:layout_below="@+id/tv_getphonenumber2_id"
         android:textSize="16dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"
         android:textColor="#0000ff"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getjobdescription2_id"
         android:textSize="20dp"
         android:text="The type of job to be done"
         android:layout_below="@+id/tv_getphonenumber_id"
         android:textColor="#000000"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getjobdescription_id"
         android:textSize="16dp"
         android:text="The type of job to be done"
         android:layout_below="@+id/tv_getjobdescription2_id"
         android:textColor="#0000ff"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getdescribethetermsofemployment2"
         android:textSize="20dp"
         android:text="The Duration of Employment"
         android:layout_below="@+id/tv_getjobdescription_id"
         android:textColor="#000000"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getdescribethetermsofemployment"
         android:textSize="16dp"
         android:text="The Duration of Employment"
         android:layout_below="@+id/tv_getdescribethetermsofemployment2"
         android:textColor="#0000ff"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getskillsandrequrements2_id"
         android:text="Requirements/skills needed"
         android:layout_below="@+id/tv_getdescribethetermsofemployment"
         android:textSize="20dp"
         android:textColor="#000000"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getskillsandrequrements_id"
         android:text="Requirements/skills needed"
         android:layout_below="@+id/tv_getskillsandrequrements2_id"
         android:textSize="16dp"
         android:textColor="#0000ff"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"/>
 
 
