--- a/app/src/main/res/drawable/textviews_borders.xml
+++ b/app/src/main/res/drawable/textviews_borders.xml
@@ -2,10 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
 
-
     <stroke
-        android:width="2dp"
-        android:color="#0000ff"/>
+        android:color="#000000"
+        android:width="1dp"/>
+
+
+
+
 
 
 </shape>
