--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,174 +1,307 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_getname1_id"
-        android:text="Name"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="20dp" />
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_getname1_id"
+            android:text="Name :"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="20dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_getname_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textColor="#111111"
+            android:textSize="14dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginStart="50dp">
+
+        </TextView>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/tv_country_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="25dp"
+            android:text="Country :"
+            android:textColor="#000000"
+            android:textSize="20dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_getcountry1_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="25dp"
+            android:text="Country"
+            android:textColor="#111111"
+            android:textSize="14dp">
+
+        </TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp">
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_getlocation2_id"
+            android:text="Location/city/town"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp">
+
+        </TextView>
+
+
+        <TextView
+            android:id="@+id/tv_getlocation_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location/City/Town"
+            android:textColor="#111111"
+            android:textSize="14dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp">
+
+        </TextView>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp">
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_getphonenumber2_id"
+            android:text="Phone number"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp" >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_getphonenumber_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone number"
+            android:textColor="#111111"
+            android:textSize="14dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            >
+
+        </TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp">
+
 
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getname_id"
-        android:text="Name"
-        android:textSize="16dp"
-        android:textColor="#0000ff"
-        android:layout_marginTop="40dp"
-       android:layout_marginLeft="120dp"/>
-
-
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getcountry_id"
-        android:text="Country"
-        android:textColor="#000000"
-        android:layout_below="@+id/tv_getname_id"
-        android:textSize="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="35dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getcountry1_id"
-        android:text="Country"
-        android:textColor="#0000ff"
-        android:layout_below="@+id/tv_getname_id"
-        android:textSize="16dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="40dp"/>
-
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getlocation2_id"
-        android:text="Location/City/Town"
-        android:textColor="#000000"
-        android:layout_below="@+id/tv_getcountry1_id"
-        android:textSize="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
-
-
-    <TextView
-        android:id="@+id/tv_getlocation_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_getlocation2_id"
-        android:layout_marginTop="28dp"
-        android:layout_marginLeft="20dp"
-        android:text="Location/City/Town"
-        android:textColor="#0000ff"
-        android:textSize="16dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getphonenumber2_id"
-        android:text="Phone Number"
-        android:layout_below="@+id/tv_getlocation_id"
-        android:textSize="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="35dp"
-        android:textColor="#000000"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getphonenumber_id"
-        android:text="Phone Number"
-        android:layout_below="@+id/tv_getphonenumber2_id"
-        android:textSize="16dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
-        android:textColor="#0000ff"/>
-
-    <TextView
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_getjobdescription2_id"
-        android:textSize="20dp"
         android:text="The type of job to be done"
-        android:layout_below="@+id/tv_getphonenumber_id"
+        android:textSize="20dp"
         android:textColor="#000000"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="20dp" >
+
+    </TextView>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/tv_getjobdescription_id"
-        android:textSize="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="The type of job to be done"
-        android:layout_below="@+id/tv_getjobdescription2_id"
-        android:textColor="#0000ff"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"/>
+        android:textColor="#111111"
+        android:textSize="14dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="20dp"
+        >
 
+    </TextView>
 
-    <TextView
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_getdescribethetermsofemployment2"
-        android:textSize="20dp"
-        android:text="The Duration of Employment"
-        android:layout_below="@+id/tv_getjobdescription_id"
-        android:textColor="#000000"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp">
 
 
-    <TextView
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_getdescribethetermsofemployment2"
+            android:text="The duration of employment"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp" >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_getdescribethetermsofemployment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The duration of employment"
+            android:textColor="#111111"
+            android:textSize="14dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            >
+
+        </TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@drawable/textviews_borders"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_getdescribethetermsofemployment"
-        android:textSize="16dp"
-        android:text="The Duration of Employment"
-        android:layout_below="@+id/tv_getdescribethetermsofemployment2"
-        android:textColor="#0000ff"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"/>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getskillsandrequrements2_id"
-        android:text="Requirements/skills needed"
-        android:layout_below="@+id/tv_getdescribethetermsofemployment"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_getskillsandrequrements_id"
-        android:text="Requirements/skills needed"
-        android:layout_below="@+id/tv_getskillsandrequrements2_id"
-        android:textSize="16dp"
-        android:textColor="#0000ff"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp">
 
 
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_getskillsandrequrements2_id"
+            android:text="Requirements/skills neede"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp" >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_getskillsandrequrements_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Requirements/skills neede"
+            android:textColor="#111111"
+            android:textSize="14dp">
+
+        </TextView>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+   
